Changes since 2.0.6:

(ms) Fixed clock to [re]start at 0:00 upon [song] initialization.

(ms) Converted complete source tree from kdevelop to native Automake
and made it build a library and the console player. Developers are
advised to configure the package with --disable-shared, so that they
don't need to install a shared library and/or set the
LD_LIBRARY_PATH, respectively.


Release Notes 2.0.6:

This version mainly sees bug fixes and finally gets both the Linux and
Windows versions to exactly the same code state.

Bug Fixes:

Tunes which didn't play.
DirectX fixes.
Timers fixed for both directx and mmsystem drivers and will therefore
never cache ahead by more than 0.5 secs.  This still needs doing under
Linux to prevent the timers getting 3 seconds ahead.
And more...


Added:

Most of the other features of the expermental version now classed as 2.0.5
apart from fastforward/rewind and filter redefinition.
Ability to skip to the prev/next subtune using the '<' and '>' keys.
And more...


Features for next release:

Ansi console support delayed till next release.
Songlength database support delayed.
Filter redefinition delayed.
Fastforward/rewind, delayed indefinately untill feedback is provided
on how good/bad it is (please any feedback at all!).
Player configuration file.



Release Notes 2.0.4-2:

Bug fixes to sid mixer.
Program termination now quicker from ^C.
New xSID code included for testing.
New man page added.
Thanks to those concerened for finding/fixing the bugs in this release.

To follow shortly:
Again 2.0.5 will follow, with the last of the features from my unofficial
experimental version (found on the sidplay2 ftp site).  Be warned that there
are now bug fixes in the main version which the experimental one does not
contain!

From now on experimental versions will be released as patches on the
main release versions in CVS until they are determined to be stable.



Release Notes 2.0.4:
